# rlox

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: callable.rs  environment.rs  evaluation_result.rs  grammar.rs  interpreter.rs  lexical_error.rs  main.rs  parser.rs  scanner.rs  side_effects.rs  statement.rs  token.rs
